<resources>
    <string name="app_name">开心100游戏盒子</string>
    <string name="open_page_for_result">openPageForResult示例</string>
    <string name="set_result">返回页面结果</string>

    <string name="lebox_wechat_recharge">兑换</string>
    <string name="lebox_joinwechat_recharge_hint">进群，领码，兑奖励</string>

    <string name="lebox_info_dialog_title">温馨提示</string>
    <string name="lebox_retry">重试</string>
    <string name="lebox_input_dialog_title">编辑</string>
    <string name="lebox_web_dialog_title">协议</string>
    <string name="from_album">从相册选择</string>
    <string name="from_camera">拍照</string>
    <string name="lebox_set_portrait_failed">设置头像失败, 是否重试?</string>
    <string name="lebox_get_task_list_failed">获取任务列表失败</string>
    <string name="lebox_get_task_status_failed">获取任务状态失败</string>
    <string name="lebox_get_news_category_failed">获取新闻分类失败</string>
    <string name="shake_time_used_out">今日摇一摇机会已用完</string>
    <string name="obtain_ad_failed">什么都没摇到</string>
    <string name="hbrain_cooling">请等待冷却完成</string>
    <string name="hbrain_times_used_out">今日红包雨次数已用完</string>
    <string name="hbrain_rest_times_format">今日免费%d次</string>
    <string name="shake_nothing">什么都没摇到，请稍后再试</string>
    <string name="dear_user">尊敬的用户：</string>
    <string name="anti_addiction_tip">根据国家新闻出版署的《通知》，要求游戏用户使用手机号进行实名注册。为保证流畅游戏体验，享受健康游戏生活，请广大玩家完成实名注册。</string>
    <string name="try_for_one_hour">试玩一小时</string>
    <string name="login_register">登录/一键注册</string>
    <string name="submit">提交</string>
    <string name="leto_hint_input_id_name">请输入姓名</string>
    <string name="leto_hint_input_id_number">请输入身份证号码</string>
    <string name="format_sms_code_count_down">%ds重新获得</string>
    <string name="idcard_ok">实名认证成功</string>
    <string name="warm_tip">温馨提示</string>
    <string name="idno_not_valid">请输入正确的身份证号</string>
    <string name="idname_not_valid">请输入正确的名字</string>
    <string name="obtain_sms_code">获取验证码</string>
    <string name="ok">确认</string>

    <string-array name="find_tab">
        <item>推荐</item>
        <item>关注</item>
        <item>圈子</item>
    </string-array>

    <string name="continue_text">继续下载</string>
    <string name="start_text">下载游戏</string>
    <string name="pending_text">等待</string>
    <string name="install_text">安装游戏</string>
    <string name="pause_text">暂停</string>
    <string name="retry_text">重试下载</string>
    <string name="open_text">开始游戏</string>
    <string name="ok_to_exit">确认并退出应用</string>
    <string name="fcm_content_workday">根据国家新闻出版署的《通知》，未满18周岁，非节假日游戏时间不得超过1.5小时。您今日的游戏时间已累计达到1.5小时，请您合理安排时间。</string>
    <string name="fcm_content_holiday">根据国家新闻出版署的《通知》，未满18周岁，节假日游戏时间不得超过3小时。您今日的游戏时间已累计达到3小时，请您合理安排时间。</string>
    <string name="fcm_content_time">根据国家新闻出版署的《通知》，您未满18周岁，每日22时至次日8时，暂不提供游戏服务，请您合理安排时间。</string>
    <string name="try_time_used_up">试玩时间已结束</string>

</resources>
