<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/fcm_bg" />

        <TextView
            android:id="@+id/itemTitleLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/dear_user"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemTitleCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/dear_user"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/itemContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/anti_addiction_tip"
            android:textColor="@color/colorTextSecondary" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/itemRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <EditText
                android:id="@+id/itemPhone"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#ffe4e4e4"
                android:hint="@string/leto_hint_input_phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#666666"
                android:textColorHint="#A9A9A9"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/itemPhoneCode"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:background="#ffe4e4e4"
                android:hint="@string/leto_hint_input_sms"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#666666"
                android:textColorHint="#A9A9A9"
                app:layout_constraintEnd_toStartOf="@id/itemObtainPhoneCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemPhone" />

            <TextView
                android:id="@+id/itemObtainPhoneCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/validation_code_bg"
                android:text="@string/obtain_sms_code"
                android:textColor="@drawable/selector_text_color"
                app:layout_constraintBottom_toBottomOf="@id/itemPhoneCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/itemPhoneCode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/itemPhoneCode">

                <TextView
                    android:id="@+id/itemTryPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_rectangle_blue_edge"
                    android:text="@string/try_for_one_hour"
                    android:textColor="#ff3d9af0" />

                <TextView
                    android:id="@+id/itemLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/round_rectangle_blue_content"
                    android:gravity="center"
                    android:text="@string/login_register"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/itemCertification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visisibility="visible">

            <EditText
                android:id="@+id/itemIdName"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#ffe4e4e4"
                android:hint="@string/leto_hint_input_id_name"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#666666"
                android:textColorHint="#A9A9A9"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/itemIdNumber"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:background="#ffe4e4e4"
                android:hint="@string/leto_hint_input_id_number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#666666"
                android:textColorHint="#A9A9A9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemIdName" />

            <TextView
                android:id="@+id/itemSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/round_rectangle_blue_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/itemIdNumber" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/itemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/round_rectangle_blue_content"
            android:gravity="center"
            android:text="@string/ok_to_exit"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/itemIdNumber" />

    </LinearLayout>
</android.support.v7.widget.CardView>